# biomedical

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CONTRIBUTING.md  CrossTraining.ipynb  MANIFEST.in  Makefile  README.md  REVIEW_GUIDE.md  UPLOADING.md  __init__.py  app.py  conda.yaml  conda.yml  dev-requirements.txt  dev_requirements.txt  load_all.py  meta_dataloader.py  minimal_use_case.py  requirements.txt  setup.cfg  task_schemas.md  test_dataloader.py  test_dataset.py  test_everything.py  thisisatest.txt  tmp_TEST.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
bigbio/: dataloader.py  hf_maps.py
biomuppet/: blurb_eval_tokcls.py  blurb_predict_tokcls.py  blurb_print_tokcls_statistics.py
dataloader/: README.md  __init__.py  dataset.py  test_dataset.py  utils.py  utils_dataloaders.py
examples/: bc5cdr.py  bioasq.py  bioasq9b.py  bioasq_task_b.py  biosses.py  cellfinder.py  chemprot.py  hallmarks_of_cancer.py  mlee.py  mqp.py  muchmore.py  n2c2_2011.py  n2c2_2011_coref.py  nlm_chem.py  nlmchem.py  paramed.py  scitail.py  test.py  test_muchmore.py  test_n2c2_2011.py  test_n2c2_2011_coref.py  utils.py
hackathon_instructions/: README.md  template.py
hub/: bigbiohub.py  collect_errors.py  convert_all_scripts.sh  hubtools.py  licenses.py  make_hub_script.py  upload_bigbiohub.py
misc/: dataset.py  test_dataset.py  utils.py
notebooks/: Biomedical NLP Preprocessing - scispaCy.ipynb  CausalLM.ipynb  NER - IOB Tagging Prompts.ipynb  bc5cdr.ipynb  few_shot_baselines.ipynb  materializing-meta-datasets.ipynb  zero_shot_baselines.ipynb
prompts/: bc5cdr.py  (+8 more)
(+798 files in other folders)
