[metadata]
name = biomed_datasets
version = attr: biomed_datasets.__version__

[options]
packages = biomed_datasets
python_requires = >=3.8,<3.11
install_requires =
    bioc==2.0.post4
    datasets==2.1.0
    numpy==1.21.2
    openpyxl>=3.0.9,<3.1.0
    pandas==1.3.3
    pybrat==0.1.4

[options.extras_require]
dev =
  black>=22.1.0,<22.2.0
  flake8>=3.8.3,<3.9.0
  isort>=5.0.0,<5.1.0
ipython =
  ipython

